Added most recent version of project files

--- a/Web/dontgetshot.html
+++ b/Web/dontgetshot.html
@@ -4,11 +4,11 @@ By Nick Conlon
 -->
 <html>
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <title>Don't Get Shot</title>
         <link rel="shortcut icon" href="images/favicon.ico">
         <link rel="stylesheet" href="css/main.css">
-        <style type="text/css"></style>
     </head>
     <body>
         <canvas id="canvas">Your browser doesn't support canvas :(</canvas>
